2006-04-26  Johan Dahlin  <johan@gnome.org>

	* kiwi/dist.py (_VariableExtender.__init__): When prefix is not
	set, use sys.prefix instead.

2006-04-25  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* tests/test_ObjectList.py: Add tests for list of RadioButtons

2006-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py (KiwiEntry.prefill): Fix exceptions,
	fixes #2535 (Patrik O'Brien)

=== 1.9.8 ===
2006-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-04-25  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py (Column.as_string): Use a slightly
	different logic to convert to a string, fixes boolean radio
	columns

2006-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py: Add support for .gz and .bz2 compressed
	glade files, supported by recent gazpacho versions.
	Also check in the current directory when everything else
	fails. Based on patch by Sidnei da Silva, fixes #2409

2006-04-24  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py: fixing when data is None in as_string
	* tests/test_ObjectList.py: a test case when data is None

2006-04-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/main.py:
	* kiwi/ui/test/player.py:
	Run the script in a separate thread and the application
	in the main thread. Makes it easier to integrate the testsuite
	in applications that can't be run in threads.

2006-04-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* examples/framework/sizegroup/shell.glade:
	* examples/framework/sizegroup/slave_view.glade:
	* examples/framework/sizegroup/slave_view2.glade:
	* examples/framework/sizegroup/slaves.py:
	Sizegroup merging example
	* kiwi/ui/views.py:
	When attaching a slave, merge the sizegroups with the same name

2006-04-19  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/objectlist.py (_ContextMenu._on_menuitem__activate): 
	Call row_changed for all rows after changing the visibility a